<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_internet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ran.videolibraryapp.InternetActivity"
    android:orientation="vertical"
    android:weightSum="8"
    android:layoutDirection="ltr">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="8">

        <TextView
            android:text="@string/internet_search_titletv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_weight="2" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/searchET_internetac"
            android:layout_weight="5"
            android:hint="@string/internetac_search_hint" />

        <Button
            android:text="@string/go_btn_internetac"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/goBtn_internetac"
            android:layout_weight="1"
            android:background="@drawable/mybtn"/>
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:id="@+id/internetmoviesLV" />

    <Button
        android:text="@string/cancel_btn_internetac"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/cancelBtn_internetac"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:background="@drawable/mybtn"/>
</LinearLayout>
