<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ran.videolibraryapp.AddEditActivity"
    android:orientation="vertical"
    android:weightSum="12"
    android:layoutDirection="ltr"
    android:focusable="false"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:weightSum="8">

        <TextView
            android:text="@string/subject_title_acaddedit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textsubject"
            android:layout_weight="2"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            android:id="@+id/movieSubjectEditET"
            android:layout_weight="6"
            android:layout_gravity="center"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:ellipsize="end" />
    </LinearLayout>

    <TextView
        android:text="@string/body_title_acaddedit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/textbody"
        android:layout_weight="1"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/layout_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="7dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/movieBodyEditET"
                android:background="@drawable/layoutitem_bg"
                android:gravity="left"
                android:text="ddd" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:weightSum="7">

        <TextView
            android:text="@string/url_title_acaddedit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            android:id="@+id/movieUrlEditET"
            android:layout_weight="4"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:singleLine="true"
            android:ellipsize="end" />

        <Button
            android:text="@string/btn_show_acaddedit"
            android:layout_height="wrap_content"
            android:id="@+id/showUrlBtn"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:background="@drawable/mybtn"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/imageView2"
        android:layout_weight="3"
        android:scaleType="fitXY"
        android:layout_gravity="center"
        android:paddingBottom="5dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <Button
            android:text="@string/ok_btn_addedit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/okBtn_AddEdit"
            android:layout_weight="1"
            android:background="@drawable/mybtn"
            android:layout_marginTop="7dp"
            android:layout_marginRight="5dp" />

        <Button
            android:text="@string/cancel_btn_addedit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancelBtn_addedit"
            android:layout_weight="1"
            android:background="@drawable/mybtn"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="5dp" />
    </LinearLayout>
</LinearLayout>
